--- a/index.ipynb
+++ b/index.ipynb
@@ -171,20 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-c67f84f7cc4d>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-5-64735a9a9aa7>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-c67f84f7cc4d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    mexico = (countries[3 = 'Mexico'])\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-64735a9a9aa7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    mexico = (countries[3] = 'Mexico')\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "mexico = (countries[3 = 'Mexico'])\n",
+    "contries[3] = 'Mexico'\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
