--- a/index.ipynb
+++ b/index.ipynb
@@ -235,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -251,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,10 +284,12 @@
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
-       " 'South Korea']"
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
