--- a/index.ipynb
+++ b/index.ipynb
@@ -429,11 +429,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set(countries)\n",
+    "unique "
    ]
   },
   {
