Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -429,19 +429,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique "
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Finland',\n",
+       " 'Italy',\n",
+       " 'South Korea',\n",
+       " 'Morocco',\n",
+       " 'Argentina',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Croatia',\n",
+       " 'USA',\n",
+       " 'Canada']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
