--- a/index.ipynb
+++ b/index.ipynb
@@ -480,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = countries - unique_\n",
     "num_of_repeats # 3"
    ]
   },
